fixed button colors, meal keyboard clipping outside viewbox, meal list in new order not scrolling, fixed new order custom message not wrapping inside div.

--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,5 @@
   background-color: darkcyan;
   border: none;
   border-radius: 4px;
+  color: black;
 }
