--- a/src/components/OrderDetails.css
+++ b/src/components/OrderDetails.css
@@ -2,9 +2,8 @@
 .orderListItem {
     display: flex;
     align-items: center;
-    padding: 8px 0px;
+    padding: 8px 0;
     border-bottom: 1px solid crimson;
-    overflow: hidden;
 }
 
 .orderItem_remove {
@@ -23,7 +22,7 @@
 
 .orderListItem_custom_message {
     text-align: start;
-    text-wrap: wrap;
+    word-break: break-word;
     border-top: 1px solid white;
     padding-top: 3px;
     margin-top: 4px;
